css/main.css
.first-section, .second-section, .four-section, .five-section, .six-section {
  width: 100%;
  height: 100vh;
  max-height: 715px;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.first-section {
  background-color: var(--blue-color);
  z-index: -1;
}

.second-section, .four-section {
  overflow: visible;
  gap: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  background-color: var(--background-gray-color);
  padding-bottom: var(--padding-blocks);
}

.second-section {
  height: 100%;
  max-height: none;
}

.third-section {
  width: 100vw;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.four-section, .five-section, .six-section {
  gap: 40px;
  padding: var(--padding-blocks) 0;
  height: 100%;
  max-height: none;
}

.five-section, .six-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
}

.six-section, .seven-section {
  background-color: var(--background-gray-color);
}

.seven-section {
  width: 100vw;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: 40px;
}
/* 
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0s, visibility 0s;
}

.overlay-active {
  opacity: 1;
  visibility: visible;
  z-index: -1;
} */
/* 
@keyframes slideOutLeft {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-100%);
  }
}

@keyframes slideInRight {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(0);
  }
}

.overlay.slide-out {
  animation: slideOutLeft 0.6s ease-in-out forwards;
  z-index: -1;
}

.overlay.slide-in {
  animation: slideInRight 0.6s ease-in-out forwards;
  opacity: 1;
  visibility: visible;
  z-index: -1;
} */

.background-colors {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
}

.content-area {
  width: var(--width-container);
  max-width: var(--max-width);
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  z-index: 1;
  position: relative;
  height: 100%;
}

.text-wrapper {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.label {
  font-size: 52px;
  font-weight: 500;
  color: white;
}

.description {
  font-size: 22px;
  font-weight: 400;
  color: white;
}

.buttons-wrapper {
  width: 100%;
  margin-top: 52px;
}

.btn-catalog {
  padding: 16px 44px;
  height: 62px;
  border-radius: var(--btn-border-radius);
  background-color: var(--orange-color);
  color: white;
}

.back-img {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: -100px;
  width: 51.46%;
  max-width: 741px;
}

@media (max-width: 1096px) {
  .back-img {
    bottom: 74px;
    top: auto;
    transform: none;
    right: 0;
  }
}

/* .circles-wrapper {
  display: flex;
  align-items: start;
  justify-content: center;
  gap: 6px;
  margin-top: 40px;
}

.circles-wrapper svg {
  cursor: pointer;
  transition: transform 0.3s ease;
}

.circles-wrapper svg:hover {
  transform: scale(1.2);
}

.circles-wrapper svg circle {
  transition: fill 0.3s ease;
}

.circles-wrapper svg.active circle {
  animation: pulse 0.3s ease;
}

@keyframes pulse {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.3);
  }
  100% {
    transform: scale(1);
  }
} */

.content-wrapper {
  width: var(--width-container);
  max-width: var(--max-width);
  height: 100%;
  padding: var(--padding-blocks) 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 50px;
}

.third-section-up {
  max-width: var(--max-width);
  display: flex;
  align-items: center;
  justify-content: center;
}

.about-text-wrapper {
  max-width: 610px;
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  gap: 20px;
}

.company-label {
  font-size: 40px;
  font-weight: 500;
}

.company-img {
  pointer-events: none;
  width: 610px;
  /* height: 423px; */
  border-radius: var(--big-border-radius);
  object-fit: cover;
}

.third-section-down {
  width: 100%;
  max-width: var(--max-width);
  background-color: var(--blue-color);
  padding: 32px 40px;
  border-radius: var(--big-border-radius);
  align-items: center;
  display: flex;
  justify-content: space-between;
  box-sizing: border-box;
  gap: 16px;
}

.about-item {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  gap: 15px;
}

.about-item-text {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  gap: 3px;
  color: white;
}

.about-item-text-label {
  font-size: 20px;
  font-weight: 500;
  letter-spacing: -1px;
}

.about-item-text-description {
  font-size: 16px;
  font-weight: 400;
  opacity: .8;
}

.partnership-label, .video-review-label, .sertificates-label, .news-label {
  font-size: 40px;
  font-weight: 500;
}

.partner-item {
  height: 273px;
  background-color: white;
  border-radius: var(--big-border-radius);
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: space-between;
  padding: 30px;
  text-align: start;
}

.categories-wrapper .content:nth-child(5) .partner-item {
  background-color: var(--blue-color);
  color: white;
}

/* .partner-item:hover {
  background-color: var(--blue-color);
  color: white;
} */

.partner-item-up {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.partner-item-icon {
  width: 31%;
  max-width: 124px;
}

.partner-item-label {
  font-size: 24px;
  font-weight: 600;
}

.partner-item-description {
  font-size: 16px;
  font-weight: 400;
}
/* ... */

